--- a/source/docs/2. ESP32_Development.md
+++ b/source/docs/2. ESP32_Development.md
@@ -33,7 +33,7 @@ This example demonstrates how to display the status of the bus servo through the
 
 Double-click **Serial_Servo.ino** located at the [**01 ESP32 Development\ Program\ Serial_Servo**](https://drive.google.com/drive/folders/1dwBYlEN0qjch78LfS1gWCoQSE9BQTGm3) folder.
 
-After connecting the ESP32 microcontroller to the computer, choose <img src="..\_static\media\chapter_1\section_3\image1.png" class="common_img" style="width:300px;"/>as the development board type. Click<img src="..\_static\media\chapter_1\section_3\image2.png" class="common_img" style="width:50px;"/> to download the program.
+After connecting the ESP32 microcontroller to the computer, choose <img src="..\_static\media\chapter_1\section_3\image1.png" style="width:300px;"/>as the development board type. Click<img src="..\_static\media\chapter_1\section_3\image2.png" style="width:50px;"/> to download the program.
 
 <img src="../_static/media/chapter_1/section_3/image3.png" class="common_img" style="width:500px;"/>
 
@@ -115,7 +115,7 @@ This example demonstrates how to display the status of the bus servo through the
 
 Double-click **Serial_Servo.ino** located at the [**01 ESP32 Development\ Program\ Serial_Servo**](https://drive.google.com/drive/folders/1dwBYlEN0qjch78LfS1gWCoQSE9BQTGm3) folder.
 
-After connecting the ESP32 microcontroller to the computer, choose <img src="..\_static\media\chapter_1\section_3\image1.png" class="common_img" style="width:300px;"/>as the development board type. Click<img src="..\_static\media\chapter_1\section_3\image2.png" class="common_img" style="width:50px;"/> to download the program.
+After connecting the ESP32 microcontroller to the computer, choose <img src="..\_static\media\chapter_1\section_3\image1.png"  style="width:300px;"/>as the development board type. Click<img src="..\_static\media\chapter_1\section_3\image2.png" style="width:50px;"/> to download the program.
 
 **2.2.2.2 Program Outcome**
 
@@ -192,7 +192,7 @@ void setup() {
 
 Double-click **Serial_Servo.ino** located at the [**01 ESP32 Development\ Program\ Serial_Servo**](https://drive.google.com/drive/folders/1dwBYlEN0qjch78LfS1gWCoQSE9BQTGm3) folder.
 
-After connecting the ESP32 microcontroller to the computer, choose <img src="..\_static\media\chapter_1\section_3\image1.png" class="common_img" style="width:300px;"/>as the development board type. Click<img src="..\_static\media\chapter_1\section_3\image2.png" class="common_img" style="width:50px;"/> to download the program.
+After connecting the ESP32 microcontroller to the computer, choose <img src="..\_static\media\chapter_1\section_3\image1.png"  style="width:300px;"/>as the development board type. Click<img src="..\_static\media\chapter_1\section_3\image2.png" style="width:50px;"/> to download the program.
 
 **2.2.3.2 Program Outcome**
 
@@ -268,7 +268,7 @@ void setup() {
 
 Double-click **Serial_Servo.ino** located at the [**01 ESP32 Development\ Program\ Serial_Servo**](https://drive.google.com/drive/folders/1dwBYlEN0qjch78LfS1gWCoQSE9BQTGm3) folder.
 
-After connecting the ESP32 microcontroller to the computer, choose <img src="..\_static\media\chapter_1\section_3\image1.png" class="common_img" style="width:300px;"/>as the development board type. Click<img src="..\_static\media\chapter_1\section_3\image2.png" class="common_img" style="width:50px;"/> to download the program.
+After connecting the ESP32 microcontroller to the computer, choose <img src="..\_static\media\chapter_1\section_3\image1.png"  style="width:300px;"/>as the development board type. Click<img src="..\_static\media\chapter_1\section_3\image2.png" style="width:50px;"/> to download the program.
 
 **2.2.4.2 Program Outcome**
 
@@ -345,7 +345,7 @@ void setup() {
 
 Double-click **Serial_Servo.ino** located at the [**01 ESP32 Development\ Program\ Serial_Servo**](https://drive.google.com/drive/folders/1dwBYlEN0qjch78LfS1gWCoQSE9BQTGm3) folder.
 
-After connecting the ESP32 microcontroller to the computer, choose <img src="..\_static\media\chapter_1\section_3\image1.png" class="common_img" style="width:300px;"/>as the development board type. Click<img src="..\_static\media\chapter_1\section_3\image2.png" class="common_img" style="width:50px;"/> to download the program.
+After connecting the ESP32 microcontroller to the computer, choose <img src="..\_static\media\chapter_1\section_3\image1.png"  style="width:300px;"/>as the development board type. Click<img src="..\_static\media\chapter_1\section_3\image2.png"  style="width:50px;"/> to download the program.
 
 **2.2.5.2 Program Outcome**
 
@@ -421,7 +421,7 @@ void setup() {
 
 Double-click **Serial_Servo.ino** located at the [**01 ESP32 Development\ Program\ Serial_Servo**](https://drive.google.com/drive/folders/1dwBYlEN0qjch78LfS1gWCoQSE9BQTGm3) folder.
 
-After connecting the ESP32 microcontroller to the computer, choose <img src="..\_static\media\chapter_1\section_3\image1.png" class="common_img" style="width:300px;"/>as the development board type. Click<img src="..\_static\media\chapter_1\section_3\image2.png" class="common_img" style="width:50px;"/> to download the program.
+After connecting the ESP32 microcontroller to the computer, choose <img src="..\_static\media\chapter_1\section_3\image1.png"  style="width:300px;"/>as the development board type. Click<img src="..\_static\media\chapter_1\section_3\image2.png" style="width:50px;"/> to download the program.
 
 **2.2.6.2 Program Outcome**
 
