--- a/source/docs/3. STM32_Development.md
+++ b/source/docs/3. STM32_Development.md
@@ -21,7 +21,7 @@ Install Keil MDK IDE on PC. The software package is stored in [**2. Softwares->S
 
 1. Connect the controller to the computer using a USB cable.
 
-2. Double-click STM32 serial port programming software **FlyMcu** <img src="C:\Users\Administrator\Desktop\1 教程资料\source\_static\media\chapter_1\section_4\image2.png" class="common_img" style="width:60px;"/>.
+2. Double-click STM32 serial port programming software **FlyMcu** <img src="../_static/media/chapter_1/section_4/image2.png"  style="width:60px;"/>.
 
 3. Click the ① ”**...**” icon and select the HEX file to be programmed from the path: [**Serial_Servo\MDK-ARM\Serial_Servo**]().
 
