【HX-65HM】HX-65HM

--- a/source/docs/3. STM32_Development.md
+++ b/source/docs/3. STM32_Development.md
@@ -23,7 +23,7 @@ Install Keil MDK IDE on PC. The software package is stored in [**2. Softwares->S
 
 2. Double-click STM32 serial port programming software **FlyMcu** <img src="../_static/media/chapter_1/section_4/image2.png"  style="width:60px;"/>.
 
-3. Click the ① ”**...**” icon and select the HEX file to be programmed from the path: [**Serial_Servo\MDK-ARM\Serial_Servo**]().
+3. Click the ① ”**...**” icon and select the HEX file to be programmed from the path: [**Serial_Servo\MDK-ARM\Serial_Servo**](https://drive.google.com/drive/folders/1dwBYlEN0qjch78LfS1gWCoQSE9BQTGm3).
 
 
 <img src="../_static/media/chapter_1/section_4/image14.png" class="common_img" style="width:800px;"/>
